@@ -5,6 +5,11 @@ Changelog
 2.0.2 (unreleased)
 ------------------
 
+- Rebuilded the tasktemplates create method: create now a main task with subtasks for every template.
+  Issue #1378 Standardablauf ausloesen soll Unteraufgaben erstellen
+  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1378
+  [phgross]
+
 - Added French translations.
   [ttschanz]
 
